tests/compile_errors/yield-without-annotation.buzz
// got type `int`, expected `void`
namespace yield_without_annotation;

/// Function that yields without declaring a yield type.
fun yieldWithoutAnnotation() > void {
    _ = yield 1;
}

test "Yield without annotation" {
    yieldWithoutAnnotation();
}
